# -

./: .env.example  .gitattributes  .gitignore  AI学习计划.md  README.md  V6_STRATEGY_DOC.md  _wrapper.py  _wrapper_query.py  add_indexes.sql  backtest_selection.py  code_for_review.txt  config.py  daily_advice.py  daily_advisor.py  database_export.sql  diagnose_network.py  init_db.py  requirements.txt  run.py  run_backtest.py  run_select.py  run_select_v6.py  sim_portfolio.json  sim_update.py  strategy_engine.py  tushare_client.py.example
etf_trader/: README.md  backtest_value.py  daily_pick.py  etf_bollinger.py  fetch_sina.py  friend_watch.py  init_db.py  main.py  portfolio.py  pyproject.toml  quality_hold.py  quality_swing.py  quant_model.py  run_web.py  settings.yaml  setup.py  stock_cache.json  stock_picker.py  t0_model.py
etf_trader/src/advisor/: __init__.py  operation_advisor.py
etf_trader/src/backtest/: __init__.py  odds_gate_backtest.py
etf_trader/src/config/: __init__.py  settings_reader.py
etf_trader/src/dashboard/: app.py  comparison.py  detail.py  overview.py  pnl.py  positions.py
etf_trader/src/database/: __init__.py  connection.py
etf_trader/src/fetcher/: __init__.py  base.py  daily_fetcher.py  data_manager.py  history_fetcher.py  market_index_fetcher.py
etf_trader/src/indicators/: __init__.py  base.py  bollinger.py  long_term_odds.py  ma_system.py  macd.py  rsi.py  volume.py
etf_trader/src/models/: __init__.py  enums.py  index_valuation.py  indicators.py  position.py  (+7 more)
etf_trader/web/: app.py  etf_engine.py  portfolio_engine.py  stock_engine.py
(+164 files in other folders)
